[package]
name = "netinfo-ffi"
version = "0.5.0"
authors = ["kaegi <kaegi.dev@gmail.com>"]
description = "C FFI for netinfo, which groups network usage by process"
repository = "https://github.com/kaegi/netinfo-ffi"
documentation = "https://docs.rs/netinfo-ffi"
readme = "README.md"
keywords = ["network", "profile", "usage", "netinfo", "ffi"]
license = "MIT"

[lib]
name = "netinfo"
crate-type = ["staticlib", "cdylib"]

[dependencies]
netinfo = "0.5.0"
enum_primitive = "0.1.0"
